# bluechi

config/: meson.build
data/: meson.build
debian/: README.Debian  bluechi-agent.manpages  bluechi-controller.manpages  bluechictl.manpages  changelog  control  copyright  rules
debian/patches/: config-meson-tags.patch  series
doc/man/: meson.build
src/agent/: meson.build
src/client/: meson.build
src/controller/: meson.build
src/proxy/: meson.build
systemd-units/: meson.build
